build on yaml change

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,8 @@ on:
     branches:
       - 'dockerbuild'
     paths:
-      - "docker/Dockerfile"      
+      - "docker/Dockerfile"
+      - ".github/workflows/build.yml"
       
 jobs:
   build:
